update policies, prevent text in buttons from wrapping

--- a/website/assets/styles/pages/fleet-mdm.less
+++ b/website/assets/styles/pages/fleet-mdm.less
@@ -55,6 +55,7 @@
 
  [purpose='button-row'] {
     a {
+      white-space: nowrap;
       font-weight: 700;
       font-size: 16px;
       line-height: 24px;
